--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%
 }
 
-.logo {
+/*.logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +38,4 @@
 
 .read-the-docs {
   color: #888;
-}
+}*/
