--- a/src/pages/admin/adminBookDetails/AdminBookDetailsDesign.css
+++ b/src/pages/admin/adminBookDetails/AdminBookDetailsDesign.css
@@ -72,6 +72,7 @@
     /* font-family: "Lora", "serif"; */
     font-family: "Merriweather", "serif";
     font-size: 1.8rem;
+    margin-right: 1rem;
 }
 .more:hover{
     cursor: pointer;
@@ -106,8 +107,18 @@
   font-family: "Satisfy", "cursive";
 }
 
-.edit_modal_body{
-  display: flex;
-  flex-direction: column;
-  
+/* Edit pencil design */
+.pen_icon{
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.edit_button{
+    width: 30%;
+}
+.input_field{
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 2px;
+    margin-bottom: 5px;
 }
