--- a/src/pages/user/bookDetails/BookDetailsDesign.css
+++ b/src/pages/user/bookDetails/BookDetailsDesign.css
@@ -60,10 +60,11 @@
     margin-left: 1.5rem;
   }
 .book_title{
-    font-size: 2.5rem;
-    /* font-family: "Lora", "serif"; */
-    font-family: "Noto Serif", "serif";
-    font-weight: bolder;
+    font-size: 2rem;
+    font-family: "Lora", "serif";
+    /* font-family: "Noto Serif", "serif"; */
+    /* font-weight: bolder; */
+    color: rgb(128, 16, 16);
 }
 .green_dot{
   box-shadow: 2px 8px green ;
@@ -71,7 +72,9 @@
 .author{
     /* font-family: "Lora", "serif"; */
     font-family: "Merriweather", "serif";
-    font-size: 1.8rem;
+    font-size: 1.5rem;
+    color: rgb(154, 20, 20);
+    font-weight: bold;
 }
 .more:hover{
     cursor: pointer;
@@ -84,30 +87,63 @@
   color: white;
 
 }
+
+.related_books_heading{
+  font-family: "Lora", "serif";
+
+  font-weight: bold;
+  font-style: normal;
+  font-size: 2rem;
+  color: rgb(158, 37, 18);
+}
 .related_books{
   /* font-family: "Libre Baskerville", "serif"; */
   /* font-family: "Lobster", "sans-serif"; */
   /* font-family: "Satisfy", "cursive"; */
-    font-family: "Lora", "serif";
-
+  font-family: "Lora", "serif";
+  
   font-weight: 400;
   font-style: normal;
   font-size: 2rem;
 }
 
-.heading{
-  font-size: 1.6rem;
+.place_holder{
+  font-size: 1.3rem;
   font-family: "Libre Baskerville", "serif";
   font-weight: bold;
 }
 
-.value{
-  font-size: 1.2rem;
-  font-family: "Satisfy", "cursive";
+.place_value{
+  font-size: 1.1rem;
+  font-family: "Lora", "serif";
 }
 
 .edit_modal_body{
   display: flex;
   flex-direction: column;
-  
+}
+
+.loading_style{
+   margin-left: 33%;
+}
+
+
+.noOfCopies{
+  font-size: 1.1rem;
+  font-family: "Lora", "serif";
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 4rem;
+  color: black;
+}
+.in_stock{
+  border: 2px solid rgb(62, 236, 62);
+  background-color: rgb(182, 234, 182);
+}
+
+.out_stock{
+  border: 2px solid rgb(222, 76, 76);
+  background-color: rgb(230, 180, 180);
 }
