Setup the common book details component for both user and the admin and added toast notification

--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+
+/* react toastify css */
+.toastBody {
+  font-family: "Atlas Grotesk Web", Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
