--- a/src/pages/user/bookDetails/BookDetailsDesign.css
+++ b/src/pages/user/bookDetails/BookDetailsDesign.css
@@ -9,7 +9,8 @@
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     width: 100%;
-    height: 92vh;
+    height: 80vh;
+    overflow-y: hidden;
   }
 
   .book_section{
