Added the footer component

--- a/src/pages/user/bookDetails/BookDetailsDesign.css
+++ b/src/pages/user/bookDetails/BookDetailsDesign.css
@@ -9,8 +9,9 @@
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     width: 100%;
-    height: 80vh;
-    overflow-y: hidden;
+    height: 92vh;
+    overflow-y: scroll;
+
   }
 
   .book_section{
@@ -149,3 +150,10 @@
   opacity: 0.2;
   z-index: -1;
 }
+
+/* .footer{
+  grid-row-start: 13;
+  grid-row-end: 17;
+  grid-column-start: 1;
+  grid-column-end: 9;
+} */
