--- a/src/common_components/cards/cardStyle.css
+++ b/src/common_components/cards/cardStyle.css
@@ -11,32 +11,14 @@
   margin: 10px 5px;
   width: 14vw;
   height: auto;
-  border: 2px solid darkgray;
-  background: rgba(128, 128, 128, 0.3);
-  border-radius: 1vw;
-}
-
-/* Availability section */
-.custom-availability {
-  margin: 0px 0px;
-  padding: 0px 0px;
-  width: 20%;
-  height: 1.5vw;
-  position: relative;
-  left: 10.5vw;
-  z-index: 100;
-  top: 0.5vw;
   border-radius: 1vw;
 }
 
 /* Image section */
 .custom-image {
-  margin: -1.3vw auto 3px;
-  border-radius: 1vw;
   aspect-ratio: 2/2.5;
-  width: 97%;
-  background-size: cover;
-  background-repeat: no-repeat;
+  width: inherit;
+  height: inherit;
 }
 
 .custom-name_section {
@@ -66,12 +48,7 @@
 /* buttons */
 .custom-buttons {
   margin: 3px 0px;
-  place-content: space-around;
-  /* position: relative; */
-  /* top: 15%; */
   justify-content: space-around;
-  /* margin: 3px 0px; */
-  /* position: relative; */
 }
 
 .custom-stylebtn {
@@ -87,21 +64,23 @@
   font-size: var(--font1);
 }
 
-.custom-stylebtn:hover {
-  /* font-size: 1.1vw; */
-  color: aliceblue;
-  background-color: rgb(46, 47, 84);
+.out-of-stock{
+  opacity: 0.5;
+  z-index: -1;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-.custom-stylebtn-wishlist{
-  margin: 0px -4px;
+.out-of-stock-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
   display: flex;
+  justify-content: center;
   align-items: center;
-  font-weight: 600;
-  place-content: space-evenly;
-  background: aliceblue;
-  width: 45%;
-  height: 1.5vw;
-  border-radius: 0.8vw;
-  font-size: var(--font1);
+  font-size: 1.5em;
+  opacity: 1;
 }
