--- a/src/common_components/cards/cardStyle.css
+++ b/src/common_components/cards/cardStyle.css
@@ -1,3 +1,6 @@
+*{
+  font-weight: 500;
+}
 :root {
   --font1: 1vw;
   --font2: 1.3vw;
@@ -19,7 +22,6 @@
   padding: 0px 0px;
   width: 20%;
   height: 1.5vw;
-  background-color: #3fd43f;
   position: relative;
   left: 10.5vw;
   z-index: 100;
@@ -41,14 +43,14 @@
   display: flex;
   flex-direction: column;
   margin: 0px 5px;
-  height: 5.2vw;
+  height: 5vw;
   letter-spacing: -0.5px;
 }
 
 .custom-book_name {
   padding: 0px;
   font-size: var(--font2);
-  max-height: 3.5vw;
+  max-height: 3.1vw;
   max-width: fit-content;
   overflow: hidden;
 }
@@ -56,17 +58,17 @@
 .custom-author_name {
   padding: 0px;
   font-size: var(--font1);
-  max-height: 1.4vw;
+  max-height: 1.5vw;
   max-width: fit-content;
   overflow: hidden;
 }
 
 /* buttons */
 .custom-buttons {
-  margin: 2px 0px;
+  margin: 3px 0px;
   place-content: space-around;
-  position: relative;
-  top: 15%;
+  /* position: relative; */
+  /* top: 15%; */
   justify-content: space-around;
   /* margin: 3px 0px; */
   /* position: relative; */
@@ -76,7 +78,8 @@
   margin: 0px -4px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  font-weight: 600;
+  place-content: space-evenly;
   background: aliceblue;
   width: 45%;
   height: 1.5vw;
@@ -85,6 +88,7 @@
 }
 
 .custom-stylebtn:hover {
-  font-size: 1.1vw;
-  background-color: rgb(183, 216, 244);
+  /* font-size: 1.1vw; */
+  color: aliceblue;
+  background-color: rgb(46, 47, 84);
 }
