--- a/src/pages/admin/adminBookDetails/AdminBookDetailsDesign.css
+++ b/src/pages/admin/adminBookDetails/AdminBookDetailsDesign.css
@@ -1,10 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Satisfy&display=swap');
+
 .container{
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     width: 100%;
     height: 92vh;
   }
-
+  /* .navbar{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-color: grey;
+  } */
   .book_section{
     grid-column-start: 1;
     grid-column-end: 3;
@@ -15,6 +26,7 @@
     padding: 10px;
     grid-column-start: 3;
     grid-column-end: 9;
+    /* background-color: green; */
     display: flex;
     flex-direction: row;
     overflow-y: scroll;
@@ -42,14 +54,18 @@
     margin-left: 1.5rem;
   }
 .book_title{
-    font-size: 1.8rem;
+    font-size: 2.5rem;
+    /* font-family: "Lora", "serif"; */
+    font-family: "Noto Serif", "serif";
     font-weight: bolder;
 }
 .green_dot{
   box-shadow: 2px 8px green ;
 }
 .author{
-    font-size: 1.3rem;
+    /* font-family: "Lora", "serif"; */
+    font-family: "Merriweather", "serif";
+    font-size: 1.8rem;
     margin-right: 1rem;
 }
 .more:hover{
@@ -58,11 +74,13 @@
 
 .heading{
   font-size: 1.6rem;
+  font-family: "Libre Baskerville", "serif";
   font-weight: bold;
 }
 
 .value{
   font-size: 1.2rem;
+  font-family: "Satisfy", "cursive";
 }
 
 /* Edit pencil design */
@@ -90,13 +108,4 @@
 }
 .bg-grey{
   background-color: rgb(230, 230, 230);
-}
-
-.take_input label{
-  width: 24%;
-}
-
-.take_input input, textarea{
-  padding: 5px;
-  background-color: rgb(246, 226, 226);
 }
